# meda

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  RELEASE.md  ch-vm.sh  init.sh  start.sh  test-build.pkr.hcl  test-ch-vm.sh  test-user-data.yaml  vm-test-helper.sh
.cargo/: config.toml
.github/workflows/: build-images.yml  demo-meda-usage.yml  integration-tests-advanced.yml  integration-tests-basic.yml  integration-tests-vm-creation.yml  integration-tests-vm-operations.yml  lint.yml  packer-plugin.yml  release.yml  rust.yml  unit-tests.yml
autoresearch/: results.tsv
docs/: API.md  CI.md  CODE_QUALITY.md  PACKER_INTEGRATION.md  USAGE.md  demo-workflow.md
images/ubuntu-base/: metadata.json  template.pkr.hcl
images/ubuntu-docker/: metadata.json  template.pkr.hcl
images/ubuntu-minimal/: template.pkr.hcl
packer-plugin-meda/: .goreleaser.yml  Makefile  README.md  artifact.go  builder.go  config.go  config.hcl2spec.go  go.mod  legacy_template.pkr.hcl  main.go  manifest.json  steps.go  test-minimal.pkr.hcl  test-output.pkr.hcl  test-ssh.pkr.hcl
packer-simple/: provision.sh  ubuntu-minimal.pkr.hcl
scripts/: bench_create.sh  check-quality.sh  guard.sh  install-release.sh  lint-whitespace.sh  quick-check.sh  quick-whitespace-clean.sh  remove-trailing-whitespace.sh  ssh_into_vm.sh
src/: admission.rs  api.rs  chunking.rs  cli.rs  config.rs  error.rs  gpt.rs  host_capacity.rs  image.rs  main.rs  netns.rs  network.rs  snapshot.rs  ssh.rs  util.rs  vm.rs
src/api/: handlers.rs  (+1 more)
test_data/: fast-template-user-data.yaml
tests/: integration_tests.rs
(+2 files in other folders)
