[package]
name = "meda"
version = "0.1.0"
edition = "2021"
description = "Cloud-Hypervisor micro-VM manager"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
nix = { version = "0.27", features = ["net", "process", "sched", "signal"] }
tempfile = "3.8"
reqwest = { version = "0.11", features = ["blocking"] }
indicatif = "0.17"
